fix: mobile gradient stretches to full height

--- a/src/features/pokemon/pokemon-details/pokemon-details.module.scss
+++ b/src/features/pokemon/pokemon-details/pokemon-details.module.scss
@@ -4,7 +4,7 @@
   position: absolute;
   filter: brightness(0.9);
   width: 100%;
-  height: 100%;
+  height: 100vh;
 }
 
 .container {
@@ -36,7 +36,7 @@
   justify-content: center;
   position: relative;
   width: 100%;
-  height: 100%;
+  min-height: 20vh;
 
   & div:first-child {
     position: absolute;
@@ -80,6 +80,7 @@
 
   .pokeImgContainer {
     align-self: center;
+    height: 100%;
     & div:first-child {
       bottom: 5%;
       letter-spacing: var(--font-letterspacing-5);
@@ -88,7 +89,7 @@
   }
 
   .pokeImg {
-    width: 80%;
+    width: 90%;
   }
 
   .detailsContainer {
